# VirtualRealityViewer-Slicer

./: CMakeLists.txt
VRWeb/: selgferjy.txt  web.html  web2.html
VRWeb/jbackup/effects/: OculusRiftEffect.js
VRWeb/js/controls/: OculusRiftControls.js
VRWeb/js/effects/: OculusRiftEffect.js
VRWeb/web_files/: web.html
VirtualRealityViewer/: CMakeLists.txt  qSlicerVirtualRealityViewerModule.cxx  qSlicerVirtualRealityViewerModule.h  qSlicerVirtualRealityViewerModuleWidget.cxx  qSlicerVirtualRealityViewerModuleWidget.h
VirtualRealityViewer/Documentation/: VirtualRealityViewer.dox
VirtualRealityViewer/Logic/: CMakeLists.txt  cube_to_cyl.h  vtkSlicerVirtualRealityViewerLogic.cxx  vtkSlicerVirtualRealityViewerLogic.h
VirtualRealityViewer/Resources/: qSlicerVirtualRealityViewerModule.qrc
VirtualRealityViewer/Resources/UI/: qSlicerVirtualRealityViewerModule.ui
